# libsocks5

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  torget.cpp
include/socks/detail/async/: util.hpp
include/socks5/: basic_socket.hpp  basic_stream.hpp  basic_tcp_socket.hpp  error_code.hpp  message.hpp  request.hpp  response.hpp  tcp_socket.hpp
include/socks5/detail/: throw_error.hpp
include/socks5/detail/async/: auth_method_supported.hpp  request_auth.hpp  send_request.hpp  util.hpp
include/socks5/detail/sync/: auth.hpp  command.hpp  io.hpp  open.hpp
include/socks5/detail/type_traits/: iterator.hpp  util.hpp
tests/: CMakeLists.txt
tests/include/socks5/tests/fakes/: socket.hpp
tests/include/socks5/tests/fixtures/: basic_socks5_socket.hpp  socket.hpp
tests/include/socks5/tests/util/: random.hpp
tests/src/: async_auth_method_supported_tests.cpp  async_request_auth_tests.cpp  async_send_request_tests.cpp  basic_socket_tests.cpp  basic_stream_tests.cpp  basic_tcp_socket_tests.cpp  request_tests.cpp  response_tests.cpp  sync_auth_tests.cpp  sync_command_tests.cpp  sync_io_tests.cpp  sync_open_tests.cpp
